Modify style for correct display on Safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,7 @@ footer {
     background-color 0.2s ease,
     border-color 0.2s ease,
     color 0.2s ease;
+  will-change: transform, background-color, border-color;
 }
 
 
